# SexGoodForBits-hs

./: .gitignore  LICENSE  README.md  SexGoodForBits-hs.cabal  profile.sh
lib/SexGoodForBits/: Examples.hs  Genome.hs  Population.hs
src/: Main.hs
