name:                SexGoodForBits-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SexGoodForBits-hs#readme
license:             MIT
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          brendonbrewer@hotmail.com
copyright:           2017 Brendon J. Brewer
category:            Science
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

