name:                SexGoodForBits-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SexGoodForBits-hs#readme
license:             MIT
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          brendonbrewer@hotmail.com
copyright:           2017 Brendon J. Brewer
category:            Science
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  exposed-modules:     SexGoodForBits.Genome
  build-depends:       base >= 4.7 && < 5,
                       mwc-random,
                       primitive,
                       transformers,
                       vector

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mwc-random,
                       SexGoodForBits-hs



